--- a/Autodesk.Vault/Autodesk.Vault.csproj
+++ b/Autodesk.Vault/Autodesk.Vault.csproj
@@ -19,6 +19,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.13.1" />
   </ItemGroup>
 
