add XML documentation in packages

--- a/Autodesk.ACC.DataConnector/Autodesk.ACC.DataConnector.csproj
+++ b/Autodesk.ACC.DataConnector/Autodesk.ACC.DataConnector.csproj
@@ -9,6 +9,7 @@
     <Description>Autodesk Platform: ACC Data Connector Service SDK and tools</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
