--- a/Autodesk.Authentication/Autodesk.Authentication.csproj
+++ b/Autodesk.Authentication/Autodesk.Authentication.csproj
@@ -16,6 +16,8 @@
     <PackageId>Adsk.Platform.Authentication</PackageId>
     
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
