--- a/Autodesk.ACC/Autodesk.ACC.csproj
+++ b/Autodesk.ACC/Autodesk.ACC.csproj
@@ -8,6 +8,7 @@
     <Description>Autodesk Platform: ACC services SDK and tools</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 
   </PropertyGroup>
 
