--- a/Autodesk.BIM360/Autodesk.BIM360.csproj
+++ b/Autodesk.BIM360/Autodesk.BIM360.csproj
@@ -9,6 +9,7 @@
     <Description>Autodesk Platform: BIM360 services SDK and tools</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 
   </PropertyGroup>
 
