--- a/Autodesk.ModelDerivative/Autodesk.ModelDerivative.csproj
+++ b/Autodesk.ModelDerivative/Autodesk.ModelDerivative.csproj
@@ -14,6 +14,8 @@
     <PackageId>Adsk.Platform.ModelDerivative</PackageId>
     
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 
   </PropertyGroup>
 
