--- a/Autodesk.Vault/Autodesk.Vault.csproj
+++ b/Autodesk.Vault/Autodesk.Vault.csproj
@@ -15,6 +15,8 @@
     <PackageId>Adsk.Platform.VaultData</PackageId>
     
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 
   </PropertyGroup>
 
